force-app/main/default/objects/Policy_Version__c/Policy_Version__c.object-meta.xml
<CustomObject>
    <label>Policy Version</label>
    <pluralLabel>Policy Versions</pluralLabel>
    <nameField>
        <label>Policy Version Number</label>
        <type>AutoNumber</type>
        <displayFormat>PV-{000000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>A versioned container for a set of lending policy rules with effective date range. Split from the old Policy_Rule_Version__c.</description>
</CustomObject>