force-app/main/default/objects/Policy_Version__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <label>Approved By</label>
    <type>Text</type>
    <length>255</length>
    <description>Compliance officer who approved this version</description>
</CustomField>