force-app/main/default/objects/Policy_Version__c/fields/Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_Date__c</fullName>
    <label>Approved Date</label>
    <type>Date</type>
    <description>When the policy version was approved</description>
</CustomField>