force-app/main/default/objects/Policy_Version__c/fields/Change_Justification__c.field-meta.xml
<CustomField>
    <fullName>Change_Justification__c</fullName>
    <label>Change Justification</label>
    <type>LongTextArea</type>
    <length>32000</length>
    <description>Why this version was created</description>
</CustomField>