force-app/main/default/objects/Policy_Version__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <label>Effective Date</label>
    <type>Date</type>
    <required>true</required>
    <description>Date this version becomes active</description>
</CustomField>