force-app/main/default/objects/Policy_Version__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <label>Expiration Date</label>
    <type>Date</type>
    <description>Date this version expires (null means current)</description>
</CustomField>