force-app/main/default/objects/Policy_Version__c/fields/Policy_Type__c.field-meta.xml
<CustomField>
    <fullName>Policy_Type__c</fullName>
    <label>Policy Type</label>
    <type>Picklist</type>
    <required>true</required>
    <description>What type of lending policy</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Conventional</fullName><default>false</default><label>Conventional</label></value>
            <value><fullName>FHA</fullName><default>false</default><label>FHA</label></value>
            <value><fullName>VA</fullName><default>false</default><label>VA</label></value>
            <value><fullName>USDA</fullName><default>false</default><label>USDA</label></value>
            <value><fullName>Universal</fullName><default>false</default><label>Universal</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>