force-app/main/default/objects/Policy_Version__c/fields/Supersedes__c.field-meta.xml
<CustomField>
    <fullName>Supersedes__c</fullName>
    <label>Supersedes</label>
    <type>Lookup</type>
    <referenceTo>Policy_Version__c</referenceTo>
    <relationshipName>Superseded_By</relationshipName>
    <relationshipLabel>Superseded By</relationshipLabel>
    <description>Previous version this replaces (self-lookup for version chain)</description>
</CustomField>