force-app/main/default/objects/Policy_Version__c/fields/Version_Label__c.field-meta.xml
<CustomField>
    <fullName>Version_Label__c</fullName>
    <label>Version Label</label>
    <type>Text</type>
    <length>100</length>
    <required>true</required>
    <description>Human-readable version name (e.g., Q1 2025 Conventional)</description>
</CustomField>